syntax = "proto3";

package userservice;

service FolderService {
  rpc GetFolder(GetFolderRequest) returns (FolderResponse);
}

message GetFolderRequest {
  int64 folderId = 1;
  int64 userId = 2; // для проверки принадлежности
}

message FolderResponse {
  int64 id = 1;
  string name = 2;
  int64 parentId = 3; // null если нет
  int64 userId = 4;
}