syntax = "proto3";

package fileservice;

service FileService {
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message DeleteFileRequest {
  int64 fileId = 1;
}

message DeleteFileResponse {
  bool success = 1;
  string message = 2;
}